docker-scripts/keel/keel.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: keel
  labels:
    app: keel
spec:
  selector:
    app: keel
  ports:
    - protocol: TCP
      name: http
      port: 9300
      targetPort: 9300
