docker-scripts/keel/keel.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keel
  namespace: keel
  annotations:
    kubernetes.io/ingress.class: "public"
spec:
  rules:
    - host: arendse.nom.za
      http:
        paths:
        - path: /keel
          pathType: Prefix
          backend:
            service:
              name: keel
              port:
                name: http
    - host: keel.arendse.nom.za
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keel
                port:
                  name: http
